Fixed Firefox hyperlink issues.  Fixed random and useless scrollbars.  Added title so its no longer React App in tab.
Fixed the if statement for creating hyperlinks so it works now on chrome and firefox.  Removed random and non functioning scrollbars.  Added title to the tab so it now says Note Flow instead of React App.

--- a/src/components/editor/Editor.css
+++ b/src/components/editor/Editor.css
@@ -1,7 +1,15 @@
 body{
   font-family: 'Arial';
+  
+  /*
+   Removes the bottom scroll bar on the editor. Text will automatically wrap around to next line
+   so its not needed.  Also if you try to use the arrow key to exit out of mathblock it ends
+   up controlling the bottom scroll bar. -Maslin
+  */
+  overflow-x: hidden;
 }
 .editor {
+  overflow: hidden;
   width: 100%;
   min-height: 800px;
   padding-left: 10%;
